<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sliding_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorLight"
    android:gravity="bottom"
    app:umanoOverlay="false"
    app:umanoPanelHeight="0dp"
    app:umanoShadowHeight="4dp"
    app:umanoParallaxOffset="100dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/segoeui"
                android:text="@string/share_the_app_with_your_friends"
                android:textColor="@color/colorLight"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/facebookButton" />

            <ImageButton
                android:id="@+id/facebookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="95dp"
                android:background="@drawable/facebook_icon"
                android:contentDescription="@string/start_button_cont"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/instagramButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="95dp"
                android:background="@drawable/instagram_icon"
                android:contentDescription="@string/start_button_cont"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/facebookButton" />

            <ImageButton
                android:id="@+id/whatsappButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="95dp"
                android:background="@drawable/whatsapp_icon"
                android:contentDescription="@string/start_button_cont"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/instagramButton" />

            <ImageButton
                android:id="@+id/twitterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="95dp"
                android:background="@drawable/twitter_icon"
                android:contentDescription="@string/start_button_cont"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/whatsappButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/goalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@drawable/circular_small_button"
            android:contentDescription="@string/start_button_cont"
            app:layout_constraintBottom_toBottomOf="@+id/startButton"
            app:layout_constraintStart_toEndOf="@+id/startButton" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/circular_small_button"
            android:contentDescription="@string/start_button_cont"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/startButton"
            app:layout_constraintTop_toTopOf="@+id/startButton" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/app_title"
            android:textColor="@color/colorLight"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/segoeui"
            android:gravity="center"
            android:text="@string/app_description"
            android:textColor="@color/colorLight"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle" />

        <ImageButton
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_button"
            android:contentDescription="@string/start_button_cont"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/startText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="@+id/startButton"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="@+id/startButton"
            app:layout_constraintTop_toTopOf="@+id/startButton"
            app:layout_constraintVertical_bias="0.49" />

        <TextView
            android:id="@+id/goalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="center"
            android:text="@string/goal"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/goalButton"
            app:layout_constraintEnd_toEndOf="@+id/goalButton"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="@+id/goalButton"
            app:layout_constraintTop_toTopOf="@+id/goalButton"
            app:layout_constraintVertical_bias="0.49" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/homeButton"
            app:layout_constraintEnd_toEndOf="@+id/homeButton"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="@+id/homeButton"
            app:layout_constraintTop_toTopOf="@+id/homeButton"
            app:layout_constraintVertical_bias="0.49" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/set_your_jumps_goal"
                android:textSize="16sp"
                android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <NumberPicker
                android:id="@+id/goalPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>